Now support printing a roster with more than 100 students. Probably.

--- a/popup.html
+++ b/popup.html
@@ -8,10 +8,10 @@
     </style>
   <script src="popup.js"></script>
 <body>
-  <div id="notice" style="font-size: 16pt;">... attempting to print</div>
+  <div id="notice" style="font-size: 16pt;">... attempting to print. Please wait 3 seconds while we try to load all the photos...</div>
   <br/><br/>
   <img id="clickHerePicture" src="./whereToClick.png" style="display:none; width:75%" alt="visual directions for where to click"/>
-  <div id="clickHere" style="font-size: 16pt; text-decoration: underline">Click here to open Banner</div>
+  <div id="clickHere" style="font-size: 16pt; text-decoration: underline; display:none;">Click here to open Banner</div>
   <br/><br/>
   <div>If it still doesn't work, let <a href="mailto:john.hammond@wichita.edu?subject=Visual-Student-Roster-Extension">John Hammond</a> know.</div>
   <br>
