Removed the auto-print function and add warning about adblockers

--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,8 @@
   <img id="clickHerePicture" src="./whereToClick.png" style="display:none; width:75%" alt="visual directions for where to click"/>
   <div id="clickHere" style="font-size: 16pt; text-decoration: underline;">Click here to open Banner</div>
   <br/><br/>
+  <hr/>
+  <div>If you use an adblocker, please whitelist wichita.edu.</div>
   <div>If it still doesn't work, let <a href="mailto:john.hammond@wichita.edu?subject=Visual-Student-Roster-Extension">John Hammond</a> know.</div>
   <br>
 </body>
